# space_collector

./: README.md  competition.sh  pyproject.toml  serial2tcp.py
space_collector/: serial2tcp.py
space_collector/game/: constants.py  game.py  math.py  planet.py  player.py  player_orientations.py  server.py  spaceship.py
space_collector/network/: data_handler.py
space_collector/viewer/: __main__.py  animation.py  constants.py  planet.py  player.py  score.py  space_background.py  spaceship.py  utils.py  viewer.py  window.py
tests/: test_add.py
